<resources>
    <string name="app_name">Task JAXL</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_email">User email -</string>
    <string name="log_out">Log out</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="otp">OTP</string>
    <string name="verify">Verify</string>
    <string name="request_otp">Request OTP</string>
    <string name="request_another_otp">Request Another OTP</string>
</resources>